Day11_configreader_driver

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,13 +1,13 @@
 #Add major Test Date on this file
-qa_environment=qa-environment.crystalkeyhotels.com
-dev_environment=dev-environment.crystalkeyhotels.com
-browser=chrome
+qa_environment=https://qa-environment.crystalkeyhotels.com
+dev_environment=https://dev-environment.crystalkeyhotels.com
+browser=chrome-headless
 username=john
 password=1234
+url=https://www.amazon.com
 
 #getProperty(qa_environment)  ->dev-environment.crystalkeyhotels.com
 #getProperty(browser) ->chrome
 #getProperty(username) ->john
-#
 #driver.get("dev-environment.crystalkeyhotels.com")  -> driver.get(getProperty(qa_environment))
 #driver.sendKeys("john") -> driver.sendKeys(getProperty(username))
