--- a/configuration.properties
+++ b/configuration.properties
@@ -1,7 +1,7 @@
 #Add major Test Date on this file
-qa_environment=https://qa-environment.crystalkeyhotels.com
+qa_environment=https://qa-environment.crystalkeyhotels.com/
 dev_environment=https://dev-environment.crystalkeyhotels.com
-browser=chrome-headless
+browser=chrome
 username=john
 password=1234
 url=https://www.amazon.com
