--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,8 @@
 #Add major Test Date on this file
 qa_environment=https://qa-environment.crystalkeyhotels.com/
-dev_environment=https://dev-environment.crystalkeyhotels.com
+manager_username=manager
+manager_password=Manager2!
+expectedReservationSuccessMessage=RoomReservation was inserted successfully
 browser=chrome
 username=john
 password=1234
