Day_16_excel_automation

--- a/configuration.properties
+++ b/configuration.properties
@@ -7,6 +7,7 @@ browser=chrome
 username=john
 password=1234
 url=https://www.amazon.com
+dt_url=https://editor.datatables.net/
 
 #getProperty(qa_environment)  ->dev-environment.crystalkeyhotels.com
 #getProperty(browser) ->chrome
